--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,3 +1,9 @@
 .fancy {
     color: #cb941d;
   }
+
+@media only screen and (max-width: 768px) {
+    .splash-container {
+      display: inline-flex;
+  }
+}
